RESOLVED FIXED312816
Fullscreen animation targets a 1px-tall line instead of the video content area on ign.com
https://bugs.webkit.org/show_bug.cgi?id=312816
Summary Fullscreen animation targets a 1px-tall line instead of the video content are...
phinehas133
Reported 2026-04-20 14:23:58 PDT
see title
Attachments
phinehas133
Comment 1 2026-04-20 14:23:59 PDT
phinehas133
Comment 2 2026-04-20 14:29:11 PDT
EWS
Comment 3 2026-04-20 21:08:07 PDT
Committed 311640@main (bb5f8114d0f6): <https://commits.webkit.org/311640@main> Reviewed commits have been landed. Closing PR #63158 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.