Fullscreen animation targets a 1px-tall line instead of the video content area on ign.com https://bugs.webkit.org/show_bug.cgi?id=312816 rdar://152181188

Reviewed by Jer Noble.

Sites like ign.com request fullscreen on a zero-height div that contains an absolute-positioned
video child. After subpixel snapping, absoluteBoundingBoxRect() returns a 1px-tall rect rather than
a truly empty rect, so the existing isEmpty() check never triggers the paintingRootRect fallback.
This causes the fullscreen exit animation to target a 1px-tall line instead of the actual video
content area.

Change the guard from isEmpty() (which requires width or height <= 0) to check height <= 1 or
width <= 1, so the fallback fires for elements whose bounding box rounds to a negligible size.

* Source/WebKit/WebProcess/FullScreen/WebFullScreenManager.cpp:
(WebKit::screenRectOfContents):

Canonical link: https://commits.webkit.org/311640@main